--- a/mysql/my.cnf
+++ b/mysql/my.cnf
@@ -2,6 +2,9 @@
 socket          = /tmp/mysqld.sock
 
 [mysqld]
+# 略过grant验证，忘记密码的时候可以开启改参数
+# skip-grant-tables
+
 character_set_server = utf8
 port            = 3306
 socket          = /tmp/mysqld.sock
